packages/rust/crates/xiuxian-qianji/tests/unit/bin/qianji/lint/bpmn_dmn/snapshots/qianji__tests__lint__bpmn_dmn__cases_03__qianji_lint_compact_task_route_plus_invalid_default_repair.snap
---
source: packages/rust/crates/xiuxian-qianji/src/bin/../../tests/unit/bin/qianji/lint/bpmn_dmn/cases_03.rs
expression: "stable_temp_output(&output.rendered, &temp_dir)"
---
[lint:error] $TEMP/task_route_with_invalid_default.bpmn bpmn
Source: $TEMP/task_route_with_invalid_default.bpmn
Issues: 2

[bpmn.unsupported_task_configuration] Error: Executable task must have exactly one outgoing sequence flow
   ,-[ $TEMP/task_route_with_invalid_default.bpmn:5:6 ]
 5 |    <bpmn:serviceTask id="prepare_next" implementation="${environment.services.runAgent}" />
   |     `--------------------------------------------------------------------------------------- task must have exactly one outgoing sequenceFlow
   |Help: Task `prepare_next` currently has 0 outgoing flow(s): none. Lint detail: task_requires_single_outgoing. Add one route to the next node, or route to one gateway if branching is required. All task route violations: prepare_next(0 outgoing: none).

Action:
- Repair all executable task route violations in '$TEMP/task_route_with_invalid_default.bpmn': prepare_next(0 outgoing: none). Do not stop after `prepare_next`; every listed task must end with exactly one outgoing sequenceFlow. Preserve task ids and host configs.

Fix:
- Repair every task route violation in the same patch, not only `prepare_next`: prepare_next(0 outgoing: none).
- If the task should continue, add one outgoing `sequenceFlow` from this task to the next BPMN node.
- If the task result should branch, route the task to one `exclusiveGateway` and put conditional/default branches on that gateway.
- Do not attach multiple outgoing sequence flows directly to a task; keep task routing single-exit.

Patch focus:
- repair_all_task_routes
- target: prepare_next(0 outgoing: none)
- requires: repair every listed task route violation in the same patch
- add_sequence_flow
- when: the task should continue to one known next node
- route_task_to_gateway
- when: the task result should branch after completion
- collapse_multiple_task_flows_behind_gateway
- when: the task currently has multiple outgoing routes

Examples:
- <sequenceFlow id="Flow_Task_Next" sourceRef="Task_Id" targetRef="Next_Node"/>
- Task_Id -> ExclusiveGateway_Id when branching is required

Forbidden forms:
- task with zero outgoing sequenceFlow
- task with multiple outgoing sequenceFlows
- conditional branches directly attached to a task

Structured repair:
- strategy: repair_task_single_outgoing_route
- contract: bpmn.native.task.routing.v1

[bpmn.unsupported_gateway_configuration] Error: Conditional gateway default flow reference is invalid
   ,-[ $TEMP/task_route_with_invalid_default.bpmn:6:6 ]
 6 |    <bpmn:exclusiveGateway id="decision" default="flow_missing" />
   |     `------------------------------------------------------------- retarget stale default flow `flow_missing`
   |Help: Valid outgoing flow ids from gateway `decision`: flow_yes, flow_fallback. Prefer `default="flow_fallback"` when it is the intended fallback.

Action:
- Repair gateway 'decision' by changing stale default 'flow_missing' to one valid outgoing sequenceFlow id: flow_yes, flow_fallback. Prefer `flow_fallback` if it is the fallback branch.

Fix:
- Replace `default="flow_missing"` on gateway 'decision' with one valid outgoing flow id from this same gateway: flow_yes, flow_fallback.
- Prefer `default="flow_fallback"` when it matches the intended fallback.
- Keep the selected default branch unconditional; conditions belong only on non-default outgoing branches.

Patch focus:
- set_gateway_default
- target: gateway#decision
- also: remove conditionExpression from the selected default sequenceFlow if it has one
- current: flow_missing
- preferred_default_flow_id: flow_fallback
- preferred_default_has_condition: false
- valid_outgoing_flow_ids: flow_yes, flow_fallback
- forbid: missing flow ids or flow ids owned by another source

Examples:
- default="flow_yes"
- default="flow_fallback"

Forbidden forms:
- default references a missing sequenceFlow id
- default references a sequenceFlow whose sourceRef is another node

Structured repair:
- strategy: retarget_default_flow_to_existing_outgoing
- contract: bpmn.native.gateway.bounded.v1
